--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>AverageTemp</title>
+  <title>Average Temperature</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+	<h1>Current Temperature</h1>
+	<p>Enter a zip code to find that location's current temperature averaged from two separate sources.</p>
 <%= yield %>
 
 </body>
