Worldweather api printing temp to screen

--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -3,3 +3,10 @@
 	<input type="submit" value="Submit">
 	<p id="suggestion"></p>
 </form>
+
+<div id="temp-f">
+	<h3></h3>
+</div>
+<div id="temp-c">
+	<h3></h3>
+</div>
