--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,11 +5,13 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+  <link href='http://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
 </head>
 <body>
 	<h1>Current Temperature</h1>
-	<p>Enter a zip code to find that location's current temperature averaged from two separate sources.</p>
-<%= yield %>
-
+	<div class = "content">
+		<p>Enter a zip code to find that location's current temperature averaged from two separate sources.</p>
+		<%= yield %>
+	</div>
 </body>
 </html>
