--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -1,12 +1,16 @@
-<form id="search">
-	<input type="search" id="search-zip" placeholder="Enter Zip...">
-	<input type="submit" value="Submit">
-	<p id="suggestion"></p>
-</form>
-
-<div id="temp-f">
-	<h3></h3>
-</div>
-<div id="temp-c">
-	<h3></h3>
+<div class = "content">
+	<form id="search">
+		<input type="search" id="search-zip" placeholder="Enter Zip...">
+		<input type="submit" value="Submit">
+<!-- 	<p id="suggestion"></p> -->
+	</form>
+	<div id="name">
+		<h2></h2>
+	</div>
+	<div id="temp-f">
+		<h3></h3>
+	</div>
+	<div id="temp-c">
+		<h3></h3>
+	</div>
 </div>
